[gd_scene load_steps=2 format=3 uid="uid://6a765c5304rt"]

[ext_resource type="Script" uid="uid://b4oofufr1hioe" path="res://Scenes/main.gd" id="1_jjgbg"]

[node name="main" type="Node"]
script = ExtResource("1_jjgbg")
damage = 25

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -177.5
offset_right = 358.0
offset_bottom = 177.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = "THIS IS A LABEL"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TestButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.74700004
anchor_right = 0.5
anchor_bottom = 0.74700004
offset_left = -71.0
offset_top = -56.05603
offset_right = 71.0
offset_bottom = 55.94397
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
action_mode = 0
button_mask = 0
text = "RESET HEALTH"

[connection signal="died" from="." to="." method="_on_died"]
[connection signal="pressed" from="TestButton" to="." method="_on_button_pressed"]
